# counter

./: .gitignore  CMakeLists.txt  display.hpp  main.cpp  menu.hpp
fpga/: clk_cntrol.BAK.qsys  clk_cntrol.qsys  clk_cntrol.sopcinfo  counter.ipregen.rpt  counter.out.sdc  counter.qpf  counter.qsf  counter.qws  counter.sdc  counter.vhd  counter_assignment_defaults.qdf  counter_nativelink_simulation.rpt  led_control.vhd  pll.cmp  pll.qip  pll.vhd  pll.vhd.bak  rx_fifo.bsf  rx_fifo.cmp  rx_fifo.qip  rx_fifo.vhd  top.vhd  tx_fifo.cmp  tx_fifo.qip  tx_fifo.vhd  uart.vhd  uart.vhd.bak
fpga/clk_cntrol/: clk_cntrol.bsf  clk_cntrol.cmp  clk_cntrol.csv  clk_cntrol.html  clk_cntrol.spd  clk_cntrol.xml  clk_cntrol_bb.v  clk_cntrol_generation.rpt  clk_cntrol_generation_previous.rpt  clk_cntrol_inst.v  clk_cntrol_inst.vhd
fpga/db/: a_dpfifo_1j21.tdf  a_dpfifo_k631.tdf  a_dpfifo_ut11.tdf  a_fefifo_76e.tdf  a_fefifo_n4e.tdf  a_gray2bin_gra.tdf  a_gray2bin_jgb.tdf  a_graycounter_95c.tdf  a_graycounter_9gb.tdf  a_graycounter_c26.tdf  a_graycounter_c5c.tdf  a_graycounter_en6.tdf  a_graycounter_fn6.tdf  alt_synch_pipe_1u7.tdf  alt_synch_pipe_3u7.tdf  alt_synch_pipe_e9l.tdf  alt_synch_pipe_f9l.tdf  alt_synch_pipe_g9l.tdf  (+149 more)
hardware/: AFE.bak  AFE.sch  LED_array.bak  LED_array.sch  counter-cache.lib  counter-rescue.lib  counter.bak  counter.kicad_pcb  counter.kicad_pcb-bak  counter.net  counter.pro  counter.sch-bak  counter.xml  counter_bom_.csv  counter_test.net  fp-lib-table  key_array.bak  key_array.sch  power.bak  power.sch  project.dcm  project.lib  report.txt  sym-lib-table
(+26 files in other folders)
